starting to look at processing attribute

--- a/logbook.ipynb
+++ b/logbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f238d4e2",
+   "id": "05495eae",
    "metadata": {},
    "source": [
     "## Logbook\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e2da231",
+   "id": "fe332fb7",
    "metadata": {},
    "source": [
     "### Searching for division between podcasts and songs\n",
@@ -21,8 +21,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0364f718",
+   "id": "e9c1358c",
    "metadata": {},
+   "source": [
+    "- Understanding what is `processing` attribute. I think that is some technical value, bc is correlated only with `key` and `mode`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "745a534b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
