--- a/logbook.ipynb
+++ b/logbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05495eae",
+   "id": "dd01d3af",
    "metadata": {},
    "source": [
     "## Logbook\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe332fb7",
+   "id": "0d234037",
    "metadata": {},
    "source": [
     "### Searching for division between podcasts and songs\n",
@@ -21,16 +21,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9c1358c",
+   "id": "948ff2f7",
    "metadata": {},
    "source": [
-    "- Understanding what is `processing` attribute. I think that is some technical value, bc is correlated only with `key` and `mode`."
+    "- Understanding what is `processing` attribute. I think that is some technical value, bc is correlated only with `key` and `mode`.\n",
+    "UPDATE: deleting `processing` attribute bc there exists a map one-by-one between the `key` attribute and the `processing` attribute. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "745a534b",
+   "id": "d6ae439c",
    "metadata": {},
    "outputs": [],
    "source": []
