--- a/logbook.ipynb
+++ b/logbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd01d3af",
+   "id": "6b438cb8",
    "metadata": {},
    "source": [
     "## Logbook\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d234037",
+   "id": "9eba41e8",
    "metadata": {},
    "source": [
     "### Searching for division between podcasts and songs\n",
@@ -21,17 +21,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "948ff2f7",
+   "id": "0d78053f",
    "metadata": {},
    "source": [
-    "- Understanding what is `processing` attribute. I think that is some technical value, bc is correlated only with `key` and `mode`.\n",
-    "UPDATE: deleting `processing` attribute bc there exists a map one-by-one between the `key` attribute and the `processing` attribute. "
+    "- Understanding what is `processing` attribute. I think that is some technical value, bc is correlated only with `key` and `mode`.  \n",
+    "UPDATE: deleting `processing` attribute bc there exists a map one-by-one between the `key` attribute and the `processing` attribute. \n",
+    "\n",
+    "- `time_signature` as a criterion for outlier detection. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ae439c",
+   "id": "c4cb31a5",
    "metadata": {},
    "outputs": [],
    "source": []
