--- a/clustering_first_attempt1.ipynb
+++ b/clustering_first_attempt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "45732995",
+   "id": "959e88a1",
    "metadata": {},
    "source": [
     "# Clustering first attempt"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8d03a958",
+   "id": "bd308495",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "5057f699",
+   "id": "5a8199b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "971d6e01",
+   "id": "a0399755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "676c8310",
+   "id": "214aabd5",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72227d2c",
+   "id": "ded4ed7d",
    "metadata": {},
    "source": [
     "## Clustering searching for genre division \n",
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf110596",
+   "id": "c904aa0e",
    "metadata": {},
    "source": [
     "The interesting features for the scope could be:\n",
@@ -936,7 +936,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0773997",
+   "id": "fa8a120d",
+   "metadata": {},
+   "source": [
+    "### Outlier criterion\n",
+    "The outlier criterion for the following scope is composed by the following cut:\n",
+    "- `time_sigmature` > 1.0, in order to select only _music tracks_, where the features taken into spot are all well-defined;\n",
+    "- the first criterion ideally is enough but `sleep` tracks containing noise sounds often are bad-detected by the algorithm. Bc of that, in this first phase the `sleep` tracks are all excluded. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d68d64c4",
    "metadata": {},
    "source": [
     "### Data preparation"
@@ -945,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1a9dddd6",
+   "id": "6b58f364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "59cfa0a2",
+   "id": "20c6c4da",
    "metadata": {},
    "outputs": [
     {
@@ -1002,8 +1013,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "6e6c1603",
+   "execution_count": 46,
+   "id": "8f26af46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Deleting outliers\n",
+    "df = df[(df['time_signature'] >1) & (df['genre'].str.contains('sleep')==False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5faffe33",
    "metadata": {},
    "outputs": [
     {
@@ -1105,6 +1127,17 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>14994</th>\n",
+       "      <td>3.750700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0700</td>\n",
+       "      <td>0.033400</td>\n",
+       "      <td>0.002890</td>\n",
+       "      <td>175.017</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>14995</th>\n",
        "      <td>7.200433</td>\n",
        "      <td>1</td>\n",
@@ -1113,17 +1146,6 @@
        "      <td>0.016000</td>\n",
        "      <td>0.615000</td>\n",
        "      <td>117.319</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14996</th>\n",
-       "      <td>3.045767</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0595</td>\n",
-       "      <td>0.548000</td>\n",
-       "      <td>0.940000</td>\n",
-       "      <td>92.323</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1161,7 +1183,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15000 rows × 8 columns</p>\n",
+       "<p>14086 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1172,8 +1194,8 @@
        "3          4.496667    5   1.0       0.0765      0.066400          0.001270   \n",
        "4          5.127517    7   1.0       0.0539      0.000576          0.096900   \n",
        "...             ...  ...   ...          ...           ...               ...   \n",
+       "14994      3.750700    1   0.0       0.0700      0.033400          0.002890   \n",
        "14995      7.200433    1   1.0       0.0558      0.016000          0.615000   \n",
-       "14996      3.045767    1   1.0       0.0595      0.548000          0.940000   \n",
        "14997      6.668183    1   0.0       0.0594      0.001830          0.857000   \n",
        "14998      3.287500    5   1.0       0.0531      0.000337          0.000014   \n",
        "14999      3.306817    6   1.0       0.0352      0.463000          0.000000   \n",
@@ -1185,16 +1207,16 @@
        "3      140.880             4.0  \n",
        "4      143.956             4.0  \n",
        "...        ...             ...  \n",
+       "14994  175.017             4.0  \n",
        "14995  117.319             3.0  \n",
-       "14996   92.323             3.0  \n",
        "14997  126.000             4.0  \n",
        "14998  160.044             4.0  \n",
        "14999   88.003             4.0  \n",
        "\n",
-       "[15000 rows x 8 columns]"
+       "[14086 rows x 8 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,18 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5bc972e",
-   "metadata": {},
-   "source": [
-    "### Outlier criterion\n",
-    "The outlier criterion for the following scope is composed by the following cut:\n",
-    "- `time_sigmature` > 1.0, in order to select only _music tracks_, where the features taken into spot are all well-defined;\n",
-    "- being the first criterion sometimes not enough, deleting all the tracks containing the name 'noise' and 'Noise', where algorithm is not well defined. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7733761b",
+   "id": "797c015e",
    "metadata": {},
    "source": [
     "### Measure definition\n",
@@ -1228,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dc424e56",
+   "id": "e529a49d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bb5f662",
+   "id": "5ba80908",
    "metadata": {},
    "source": [
     "### Normalization (or, standardization)\n",
@@ -1254,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "47977a71",
+   "id": "accb2a71",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3df3aa95",
+   "id": "cc875b9d",
    "metadata": {},
    "source": [
     "Being none of them really uniform, the chosen normalization is the _z-score_ normalization. "
@@ -1286,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f387f7fc",
+   "id": "d6883189",
    "metadata": {},
    "outputs": [
     {
@@ -1412,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f3c4e053",
+   "id": "0040d69b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "679b65cf",
+   "id": "35e33e41",
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11e63dc0",
+   "id": "848cf71a",
    "metadata": {},
    "outputs": [],
    "source": []
