--- a/classification_notebook.ipynb
+++ b/classification_notebook.ipynb
@@ -4879,7 +4879,8 @@
    "id": "025f18a0",
    "metadata": {},
    "source": [
-    "We decide to confirm the value of `ccp_alpha` already chosen, that is: `ccp_alpha` = 0.01 ."
+    "We decide to confirm the value of `ccp_alpha` already chosen, that is: `ccp_alpha` = 0.01 .\n",
+    "Note that this numbers come with no uncertainty, so it is not really relevant that test lies slightly over train accuracy. "
    ]
   },
   {
